# NOVA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: AUDIO_PROCESSING.md  PIPELINE_EXPLANATION.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  company_matcher.py  graph.py  quality_evaluator.py  state.py
src/document/: __init__.py  parser.py
src/llm/: __init__.py  glm_client.py
src/scrapers/: __init__.py  ir_scraper.py
src/utils/: url_validator.py  word_export.py
src/vectorstore/: __init__.py  chroma_store.py
tests/: test_full_pipeline.py  test_scraper.py
